crates/carta/tests/snapshots/golden_writer__mediawiki__common__emphasis-line-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
'''bold''' opens the line

<nowiki></nowiki>*literal star
