crates/carta/tests/snapshots/golden_writer__mediawiki__common__emphasis-with-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
''see [http://example.com text] here''
