crates/carta/tests/snapshots/golden_writer__mediawiki__common__footnote-codeblock-end.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
ref<ref><pre>code only</pre></ref>

<references />
