crates/carta/tests/snapshots/golden_writer__mediawiki__common__footnote-multipara.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
ref<ref>first paragraph

second paragraph</ref>

<references />
