crates/carta/tests/snapshots/golden_writer__mediawiki__common__footnote-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
ref<ref>the note body</ref>

<references />
