crates/carta/tests/snapshots/golden_writer__mediawiki__common__footnote-two.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
x<ref>first</ref> y<ref>second</ref>

<references />
