crates/carta/tests/snapshots/golden_writer__mediawiki__common__image-external.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<nowiki></nowiki>https://example.org/i.png<nowiki></nowiki>
