crates/carta/tests/snapshots/golden_writer__mediawiki__common__image-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
an [[File:pic.png|alt words]] inline
